# nsumt_test_02

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mina.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
app/: .env  main.py
app/core/: cache.py  config.py  db_helper.py  init_db.py  logging.py
app/dependence/: role_checker.py
app/lifespan/: lifespan.py
app/middleware/: admin_auth.py  logging_middleware.py
app/migrations/: env.py
app/migrations/versions/: 012cdf62886a_sub_ject_change.py  0a12fe4d4a57_add_user_answers.py  0aa4a7603fc1_add_faculty_and_department_models.py  141ee319dbfb_change_student_table.py  1c72e4ad8fc0_check_sync.py  3d25d9bc2a4c_user_answer.py  4162a812f3c8_inital_migration.py  4c5f86a920b4_add_group_teacher.py  67868a482f62_add_results_table.py  6b2a44dc6935_change_teacher_table.py  73c5465bb88d_add_group_teacher.py  75ce034b8b0e_add_faculty_and_department_models.py  81f3f8f973fc_sub_ject_change.py  83b8f7d66005_fix.py  (+8 more)
app/models/: __init__.py  views.py
app/modules/: router.py
app/test/: conftest.py  test_end_quiz_repro.py  test_faculty.py  test_group.py  test_hemis.py  test_kafedra.py  test_permission.py  test_question.py  test_quiz.py  test_quiz_auto_link.py  test_quiz_group_access.py  test_quiz_group_teacher.py  test_quiz_list_filter.py  test_quiz_process.py  test_quiz_upload.py  test_result.py  test_role.py  test_role_assign_permission.py  test_statistics.py  test_student.py  test_teacher.py  test_user.py  test_user_answers_flow.py  test_user_assign_role.py
(+90 files in other folders)
